test/expected/declare_=i-c.out
declare x of scope s as int
             ^
14: error: scoped names are not supported in C
